force-app/main/default/objects/Pricebook2/fields/Id_Navision__c.field-meta.xml
<CustomField>
    <fullName>Id_Navision__c</fullName>
    <label>Id Navision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>