force-app/main/default/objects/Pricebook2/fields/Name_DelWhitespaces__c.field-meta.xml
<CustomField>
    <fullName>Name_DelWhitespaces__c</fullName>
    <description>Formula para obtener el nombre del PB sin espacios en blanco para que coincide con el productCode del Product2 de la tarifa.</description>
    <formula>SUBSTITUTE( Name , &quot; &quot;, &quot;&quot;)</formula>
    <label>Name_DelWhitespaces</label>
    <type>Text</type>
</CustomField>