force-app/main/default/objects/Pricebook2/fields/Pendiente_de_confirmar__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_confirmar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca cuando está actualizado en Salesforce y falta por enviar confirmación a Navision</description>
    <label>Pendiente de confirmar</label>
    <type>Checkbox</type>
</CustomField>