force-app/main/default/objects/Pricebook2/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GLP1</fullName>
            </value>
            <value>
                <fullName>GNL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>