force-app/main/default/objects/Pricebook2/fields/V_lido_desde__c.field-meta.xml
<CustomField>
    <fullName>V_lido_desde__c</fullName>
    <label>Válido desde</label>
    <type>Date</type>
</CustomField>