force-app/main/default/objects/Pricebook2/fields/V_lido_hasta__c.field-meta.xml
<CustomField>
    <fullName>V_lido_hasta__c</fullName>
    <label>Válido hasta</label>
    <type>Date</type>
</CustomField>