force-app/main/default/objects/Pricebook2/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>Id_Navision__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
    <language>es</language>
</ListView>